Co-authored-by: Bryden Calaway <BrydenIsNotSmart@users.noreply.github.com> Co-authored-by: ShadowLp174 <shadowlp174@gmail.com>

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -31,6 +31,10 @@ input {
   @apply bg-[var(--input)] p-2 outline-none rounded-md;
 }
 
+select {
+  @apply bg-[var(--input)] p-2 outline-none rounded-md;
+}
+
 h1 {
   @apply text-3xl;
 }
