--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -5,6 +5,9 @@
 :root {
   --bg-primary: rgb(25,25,25);
   --bg-secondary: rgb(32,32,32);
+  --bg-guilds: rgb(10,10,10);
+  --bg-channels: rgb(20,20,20);
+  --bg-user-panel: rgb(12,12,12);
   --input: rgb(42, 42, 42);
   --text-secondary: rgb(107,114,128);
   --accent-primary: rgb(255, 90 ,90);
@@ -49,4 +52,12 @@ label.title {
 
 button.submit {
   @apply bg-[var(--accent-primary)] p-2 rounded-md;
+}
+
+ul.guild-sidebar {
+  @apply bg-[var(--bg-guilds)] w-16 h-full p-2 flex flex-col items-center;
+}
+
+div.channel-sidebar {
+  @apply bg-[var(--bg-channels)] w-52 h-full flex flex-col;
 }
