Progress on guild sidebar

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -8,6 +8,7 @@
   --bg-guilds: rgb(10,10,10);
   --bg-channels: rgb(20,20,20);
   --bg-user-panel: rgb(12,12,12);
+  --bg-seperator: rgb(64,64,64);
   --input: rgb(42, 42, 42);
   --text-secondary: rgb(107,114,128);
   --accent-primary: rgb(255, 90 ,90);
