--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -2,22 +2,26 @@
 @tailwind components;
 @tailwind utilities;
 
+@import url('https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
+
 :root {
   --bg-primary: #262626;
   --bg-secondary: rgb(32, 32, 32);
   --bg-guilds: #171717;
   --bg-rooms: #1c1c1c;
   --bg-user-panel: rgb(12, 12, 12);
-  --bg-ui: rgb(24,24,24);
+  --bg-ui: rgb(24, 24, 24);
   --bg-seperator: rgb(64, 64, 64);
   --input: rgb(42, 42, 42);
   --text-secondary: rgb(107, 114, 128);
   --accent-primary: rgb(255, 90, 90);
   color: white;
+
+  font-family: 'Poppins', sans-serif;
 }
 
 body {
-  @apply w-screen h-screen bg-[var(--bg-primary)];
+  @apply w-screen h-screen bg-[var(--bg-primary)] overflow-hidden;
 }
 
 div.form-wrapper {
@@ -136,6 +140,7 @@ div.status-streaming {
 div.status-sleeping {
   background-color: #f97316;
 }
+
 button[role="switch"]:has(> span[data-state="checked"]) {
   @apply bg-green-500;
 }
@@ -144,7 +149,16 @@ button[role="switch"]:has(> span[data-state="unchecked"]) {
   @apply bg-gray-500;
 }
 
+li.message:hover {
+  @apply bg-[rgba(0,0,0,0.25)];
+}
 
 button[role="switch"] span {
   @apply bg-white;
+}
+
+[contenteditable=true]:empty:not(:focus):before{
+  content:attr(placeholder);
+  color:grey;
+  font-style:italic;
 }
