--- a/src/app/globals.scss
+++ b/src/app/globals.scss
@@ -57,11 +57,91 @@ div.form-wrapper {
         justify-content: center;
 
         button {
-          background: var(--accent-primary);
+          background-color: var(--accent-primary);
           padding: 0.5rem;
           border-radius: 0.375rem;
           width: 25rem;
         }
+      }
+    }
+  }
+}
+
+ul.settings {
+  width: 100%;
+  height: 100%;
+  display: flex;
+  flex-direction: column;
+}
+
+div.modal-overlay {
+
+  &#backdrop {
+    position: fixed;
+    width: 100%;
+    height: 100%;
+    left: 0px;
+    top: 0px;
+    background: rgba(0, 0, 0, 0.75);
+    z-index: 999;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+  }
+
+  &:not(#backdrop) {
+    position: fixed;
+    top: 0px;
+    left: 0px;
+    width: 100%;
+    height: 100%;
+    display: flex;
+    z-index: 999;
+    background: var(--bg-ui);
+  }
+
+  form {
+    padding-top: 8rem;
+    padding-bottom: 8rem;
+    padding: 1rem;
+    background: var(--bg-ui);
+    display: flex;
+    flex-direction: column;
+    gap: 0.5rem;
+    border-radius: 0.5rem;
+
+    &.full {
+      width: 100%;
+      height: 100%;
+    }
+
+    header {
+      font-size: medium;
+      position: relative;
+      width: 100%;
+      height: 3rem;
+      background: none;
+    }
+
+    div.body {
+      display: flex;
+      flex-direction: column;
+      gap: 1rem;
+      height: calc(100% - 3rem);
+
+      div.row {
+        &.center {
+          justify-content: center;
+        }
+
+        display: flex;
+        width: 100%;
+        gap: 1rem;
+      }
+
+      button {
+        background-color: var(--accent-primary);
       }
     }
   }
@@ -92,16 +172,6 @@ div.app-wrapper {
     display: flex;
     flex-direction: column;
   }
-}
-
-div[role="modal"] {
-  position: absolute;
-  top: 0px;
-  left: 0px;
-  width: 100%;
-  height: 100%;
-  display: flex;
-  z-index: 999;
 }
 
 input {
