--- a/src/app/globals.scss
+++ b/src/app/globals.scss
@@ -147,6 +147,18 @@ div.modal-overlay {
   }
 }
 
+img.message-emoji {
+  width: 48px;
+  height: 48px;
+  display: inline-block;
+}
+
+img.message-emoji-text {
+  width: 1rem;
+  height: 1rem;
+  display: inline-block;
+}
+
 div.app-wrapper {
   width: 100%;
   height: 100%;
